<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

<!--    <FrameLayout-->
<!--        android:id="@+id/playerFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:background="?attr/background_elevated"-->
<!--        android:elevation="8dp"-->
<!--        tools:layout_height="@dimen/external_player_height" />-->

    <ImageView
        android:id="@+id/headerImageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/playtime_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:alpha="0"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        tools:alpha="1">

        <TextView
            android:id="@+id/txtvSeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingTop="4dp"
            android:paddingRight="24dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="1:06:29" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/playtime_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layoutDirection="ltr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

<!--        <com.joe.podcastplayer.ChapterSeekBar-->
<!--            android:id="@+id/sbPosition"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="8dp"-->
<!--            android:layout_marginRight="8dp"-->
<!--            android:clickable="true"-->
<!--            android:max="500"-->
<!--            tools:progress="100" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/txtvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/position_default_label"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="@dimen/text_size_micro" />

            <TextView
                android:id="@+id/txtvLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/position_default_label"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="@dimen/text_size_micro" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.joe.podcastplayer.PlayButton
                android:id="@+id/butPlay"
                android:layout_width="@dimen/audioplayer_playercontrols_length_big"
                android:layout_height="@dimen/audioplayer_playercontrols_length_big"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/audioplayer_playercontrols_margin"
                android:layout_marginLeft="@dimen/audioplayer_playercontrols_margin"
                android:layout_marginEnd="@dimen/audioplayer_playercontrols_margin"
                android:layout_marginRight="@dimen/audioplayer_playercontrols_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/pause_label"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_play_48dp"
                tools:srcCompat="@drawable/ic_play_48dp" />

            <com.joe.podcastplayer.CircularProgressBar
                android:layout_width="@dimen/audioplayer_playercontrols_length_big"
                android:layout_height="@dimen/audioplayer_playercontrols_length_big"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:foregroundColor="?attr/action_icon_color" />

            <ProgressBar
                android:id="@+id/progLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/audioplayer_playercontrols_length_big"
                android:layout_height="@dimen/audioplayer_playercontrols_length_big"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/butRev"
                android:layout_width="@dimen/audioplayer_playercontrols_length"
                android:layout_height="@dimen/audioplayer_playercontrols_length"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/audioplayer_playercontrols_margin"
                android:layout_marginLeft="@dimen/audioplayer_playercontrols_margin"
                android:layout_toStartOf="@id/butPlay"
                android:layout_toLeftOf="@id/butPlay"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/rewind_label"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_fast_rewind"
                tools:srcCompat="@drawable/ic_fast_rewind" />

            <TextView
                android:id="@+id/txtvRev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/butRev"
                android:layout_alignStart="@id/butRev"
                android:layout_alignLeft="@id/butRev"
                android:layout_alignEnd="@id/butRev"
                android:layout_alignRight="@id/butRev"
                android:clickable="false"
                android:gravity="center"
                android:text="30"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/butFF"
                android:layout_width="@dimen/audioplayer_playercontrols_length"
                android:layout_height="@dimen/audioplayer_playercontrols_length"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/audioplayer_playercontrols_margin"
                android:layout_marginRight="@dimen/audioplayer_playercontrols_margin"
                android:layout_toEndOf="@id/butPlay"
                android:layout_toRightOf="@id/butPlay"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/fast_forward_label"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_fast_forward"
                tools:srcCompat="@drawable/ic_fast_forward" />

            <TextView
                android:id="@+id/txtvFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/butFF"
                android:layout_alignStart="@id/butFF"
                android:layout_alignLeft="@id/butFF"
                android:layout_alignEnd="@id/butFF"
                android:layout_alignRight="@id/butFF"
                android:clickable="false"
                android:gravity="center"
                android:text="30"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/butSkip"
                android:layout_width="@dimen/audioplayer_playercontrols_length"
                android:layout_height="@dimen/audioplayer_playercontrols_length"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/butFF"
                android:layout_toRightOf="@id/butFF"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/skip_episode_label"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_skip_48dp"
                tools:srcCompat="@drawable/ic_skip_48dp" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
